--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "export": "next build"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^13.8.0",
+    "lucide-react": "^0.400.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "lucide-react": "^0.400.0"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
